Fix up dates and spacing

--- a/assets/css/chq.css
+++ b/assets/css/chq.css
@@ -16,12 +16,13 @@ body {
 
 .page-header {
   background: #2c3e4f;
+  border-bottom: #6a89af solid 3px;
   padding: .5rem 1rem;
 }
 
 .page-header a {
   color: white;
-  font-size: 1.5rem;
+  font-size: 2rem;
   font-weight: 300;
   text-decoration: none;
 }
@@ -45,14 +46,10 @@ body {
   vertical-align: middle;
 }
 
-.main-content.home ul {
-  list-style: none;
-}
-
 .chq-cir {
-  height: 1.8rem;
+  height: 2rem;
   vertical-align: text-bottom;
-  width: 1.8rem;
+  width: 2rem;
 }
 
 .main-content .post-heading {
@@ -61,6 +58,7 @@ body {
 }
 
 .main-content .post-heading + p {
+  margin-bottom: 1.5rem;
   margin-top: .5rem;
   text-align: center;
 }
